--- a/index.ipynb
+++ b/index.ipynb
@@ -1370,7 +1370,9 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    for neighbor in neighbo"
+    "    \n",
+    "    for neighbor in neighbors:\n",
+    "        neigh"
    ]
   },
   {
