--- a/index.ipynb
+++ b/index.ipynb
@@ -1370,7 +1370,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    map(lambda neighbor:neighbor['distance'],neighbors)"
+    "    map(lambda neighbor:distance.append(neighbor['distance'],neighbors)"
    ]
   },
   {
