--- a/index.ipynb
+++ b/index.ipynb
@@ -1370,7 +1370,8 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    map(lambda neighbor:distance.append(neighbor['distance'],neighbors)"
+    "    distanc=\n",
+    "    map(lambda neighbor:distance.append(neighbor['distance']),neighbors)"
    ]
   },
   {
