Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1370,8 +1370,9 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    distanc=\n",
-    "    map(lambda neighbor:distance.append(neighbor['distance']),neighbors)"
+    "    distance=[]\n",
+    "    map(lambda neighbor:distance.append(neighbor['distance']),neighbors)\n",
+    "    "
    ]
   },
   {
