--- a/index.ipynb
+++ b/index.ipynb
@@ -1372,6 +1372,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
     "    map(lambda neighbor:distance.append(neighbor['distance']),neighbors)\n",
+    "    distance.sort()\n",
     "    "
    ]
   },
