Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1373,7 +1373,7 @@
     "    distance=[]\n",
     "    map(lambda neighbor:distance.append(neighbor['distance']),neighbors)\n",
     "    distance.sort()\n",
-    "    for "
+    "    for i"
    ]
   },
   {
