Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1373,7 +1373,8 @@
     "    distance=[]\n",
     "    map(lambda neighbor:distance.append(neighbor['distance']),neighbors)\n",
     "    distance.sort()\n",
-    "    for i"
+    "    for i<number:\n",
+    "        "
    ]
   },
   {
