--- a/index.ipynb
+++ b/index.ipynb
@@ -1371,10 +1371,11 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
-    "    nearest\n",
+    "    nearest_distance=[]\n",
     "    map(lambda neighbor:distance.append(neighbor['distance']),neighbors)\n",
     "    distance.sort()\n",
     "    for i<number:\n",
+    "        neare\n",
     "        "
    ]
   },
