Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1375,7 +1375,7 @@
     "    map(lambda neighbor:distance.append(neighbor['distance']),neighbors)\n",
     "    distance.sort()\n",
     "    for i<number:\n",
-    "        neare\n",
+    "        nearest_distance.append()\n",
     "        "
    ]
   },
