--- a/index.ipynb
+++ b/index.ipynb
@@ -1375,7 +1375,8 @@
     "    map(lambda neighbor:distance.append(neighbor['distance']),neighbors)\n",
     "    distance.sort()\n",
     "    for i<number:\n",
-    "        nearest_distance.append()\n",
+    "        nearest_distance.append(distance[i])\n",
+    "    return\n",
     "        "
    ]
   },
