--- a/index.ipynb
+++ b/index.ipynb
@@ -1373,9 +1373,7 @@
     "    \n",
     "    map(lambda neighbor:distance.append(neighbor['distance']),neighbors)\n",
     "    distance.sort()\n",
-    "    for i in range[number]:\n",
-    "        nearest_distance.append(distance[i])\n",
-    "    return nearest_distance\n",
+    "    print distance\n",
     "        "
    ]
   },
