Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1363,18 +1363,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print'. Did you mean print(distance)? (<ipython-input-35-f0ab085d790d>, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-35-f0ab085d790d>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    print distance\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(distance)?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
@@ -1382,7 +1373,7 @@
     "    \n",
     "    map(lambda neighbor:distance.append(neighbor['distance']),neighbors)\n",
     "    distance.sort()\n",
-    "    print distance\n",
+    "    print(distance)\n",
     "        "
    ]
   },
