Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1373,7 +1373,7 @@
     "    \n",
     "    map(lambda neighbor:distance.append(neighbor['distance']),neighbors)\n",
     "    distance.sort()\n",
-    "    print(distance)\n",
+    "    distance)\n",
     "        "
    ]
   },
