Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1363,9 +1363,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.distance(first_neighbor, second_neighbor)>"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
@@ -1373,8 +1384,8 @@
     "    \n",
     "    map(lambda neighbor:distance.append(neighbor['distance']),neighbors)\n",
     "    distance.sort()\n",
-    "    distance)\n",
-    "        "
+    "    return distance\n",
+    "distance        "
    ]
   },
   {
