Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1385,7 +1385,7 @@
     "    map(lambda neighbor:distance.append(neighbor['distance']),neighbors)\n",
     "    distance.sort()\n",
     "    return distance\n",
-    "distance        "
+    "print(distance        "
    ]
   },
   {
