Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1363,18 +1363,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<function __main__.distance(first_neighbor, second_neighbor)>"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function distance at 0x7fcc0aa39b70>\n"
+     ]
     }
    ],
    "source": [
@@ -1385,7 +1382,7 @@
     "    map(lambda neighbor:distance.append(neighbor['distance']),neighbors)\n",
     "    distance.sort()\n",
     "    return distance\n",
-    "print(distance        "
+    "print(distance)       "
    ]
   },
   {
