Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1379,7 @@
     "    distance=[]\n",
     "    nearest_distance=[]\n",
     "    \n",
-    "    list(map(lambda neighbor:distance.append(neighbor['distance']),neighbors)\n",
+    "    list(map(lambda neighbor:distance.append(neighbor['distance']),neighbors))\n",
     "    distance.sort()\n",
     "    return distance\n",
     "print(distance)       "
