--- a/index.ipynb
+++ b/index.ipynb
@@ -1363,15 +1363,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<function distance at 0x7fcc0aa39b70>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<function __main__.distance(first_neighbor, second_neighbor)>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1381,7 +1384,8 @@
     "    \n",
     "    list(map(lambda neighbor:distance.append(neighbor['distance']),neighbors))\n",
     "    return distance\n",
-    "\n"
+    "\n",
+    "distance"
    ]
   },
   {
