Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1381,7 +1381,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
     "    nearest_distance=[]\n",
-    "    distance_all(first, neighbors)\n",
+    "    distance_all(first_neighbor, neighbors)\n",
     "    list(map(lambda neighbor:distance.append(neighbor['distance']),neighbors))\n",
     "    return distance\n",
     "\n",
