--- a/index.ipynb
+++ b/index.ipynb
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1339,7 @@
        " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,7 +1351,8 @@
     "#  {'avenue': 5, 'distance': 1.0, 'name': 'Bob', 'street': 8},\n",
     "#  {'avenue': 6, 'distance': 5.385164807134504, 'name': 'Edgar', 'street': 13},\n",
     "#  {'avenue': 3, 'distance': 2.23606797749979, 'name': 'Steven', 'street': 6},\n",
-    "#  {'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}]"
+    "#  {'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}]\n",
+    "\n"
    ]
   },
   {
@@ -1363,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1373,7 @@
        "<function __main__.distance(first_neighbor, second_neighbor)>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
