--- a/index.ipynb
+++ b/index.ipynb
@@ -1365,28 +1365,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function __main__.distance(first_neighbor, second_neighbor)>"
+       "[{'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 0.0},\n",
+       " {'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285},\n",
+       " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0},\n",
+       " {'name': 'Edgar', 'avenue': 6, 'street': 13, 'distance': 5.385164807134504},\n",
+       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979},\n",
+       " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    distance=[]\n",
-    "    nearest_distance=[]\n",
-    "    list(map(lambda neighbor:distance.append(neighbor['distance']),neighbors))\n",
-    "    return distance\n",
-    "\n",
-    "distance"
+    "neighbors"
    ]
   },
   {
