Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1385,7 +1385,13 @@
     }
    ],
    "source": [
-    "neighbors"
+    "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
+    "    distance=[]\n",
+    "    nearest_distance=[]\n",
+    "    list(map(lambda neighbor:distance.append(neighbor['distance']),neighbors))\n",
+    "    return distance\n",
+    "\n",
+    "distance"
    ]
   },
   {
