Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1379,11 +1379,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
-    "    nearest_distance=[]\n",
-    "    list(map(lambda neighbor:distance.append(neighbor['distance']),neighbors))\n",
-    "    return distance\n",
-    "\n",
-    "print(distance)"
+    "    for neighbor in "
    ]
   },
   {
