Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1379,7 +1379,8 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
-    "    for neighbor in "
+    "    for neighbor in neighbors:\n",
+    "        "
    ]
   },
   {
