Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1380,7 +1380,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
     "    for neighbor in neighbors:\n",
-    "        "
+    "        distance.append()"
    ]
   },
   {
