--- a/index.ipynb
+++ b/index.ipynb
@@ -1380,7 +1380,8 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
     "    for neighbor in neighbors:\n",
-    "        distance.append(neighbor['distance])"
+    "        distance.append(neighbor['distance'])\n",
+    "    distance.so"
    ]
   },
   {
