Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1381,7 +1381,8 @@
     "    distance=[]\n",
     "    for neighbor in neighbors:\n",
     "        distance.append(neighbor['distance'])\n",
-    "    distance.so"
+    "    distance.sort()\n",
+    "    return distance"
    ]
   },
   {
