Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1371,7 +1371,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
-    "    for neighbor in neighbors:\n",
+    "    for neighbor in n:\n",
     "        distance.append(neighbor['distance'])\n",
     "    distance.sort()\n",
     "    "
