--- a/index.ipynb
+++ b/index.ipynb
@@ -1372,7 +1372,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
     "    for i in range[len(neighbors)]:\n",
-    "        if neibour\n",
+    "        if neighbor['']\n",
     "        distance.append(neighbor['distance'])\n",
     "    distance.sort()\n",
     "    "
