--- a/index.ipynb
+++ b/index.ipynb
@@ -1365,14 +1365,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-53-268e588d4171>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-53-268e588d4171>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if neighbor[i]!=first_neighbor\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
     "    for i in range[len(neighbors)]:\n",
-    "        if neighbor[i]!=first\n",
+    "        if neighbor[i]!=first_neighbor\n",
     "        distance.append(neighbor['distance'])\n",
     "    distance.sort()\n",
     "    "
