Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1381,7 +1381,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
     "    for i in range[len(neighbors)]:\n",
-    "        if neighbor[i]!=first_neighbor\n",
+    "        if neighbor[i]\n",
     "        distance.append(neighbor['distance'])\n",
     "    distance.sort()\n",
     "    "
