Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1380,11 +1380,8 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
-    "    for i in range[len(neighbors)]:\n",
-    "        if neighbor[i]\n",
-    "        distance.append(neighbor['distance'])\n",
-    "    distance.sort()\n",
-    "    "
+    "    for neighbor in neighbors:\n",
+    "        distance.append(neighbor['distance'])"
    ]
   },
   {
