--- a/index.ipynb
+++ b/index.ipynb
@@ -1382,7 +1382,8 @@
     "    distance=[]\n",
     "    for neighbor in neighbors:\n",
     "        distance.append(neighbor['distance'])\n",
-    "    distan"
+    "    distance.sort()\n",
+    "    "
    ]
   },
   {
