--- a/index.ipynb
+++ b/index.ipynb
@@ -1383,7 +1383,7 @@
     "    for neighbor in neighbors:\n",
     "        distance.append(neighbor['distance'])\n",
     "    distance.sort()\n",
-    "    "
+    "    if neighbor"
    ]
   },
   {
