Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1381,7 +1381,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
     "    for neighbor in neighbors:\n",
-    "        if neighbor['']\n",
+    "        if neighbor['name']!=first_neighbor['']\n",
     "        distance.append(neighbor['distance'])\n",
     "    distance.sort()\n",
     "    \n",
