--- a/index.ipynb
+++ b/index.ipynb
@@ -1365,15 +1365,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-53-268e588d4171>, line 4)",
+     "evalue": "invalid syntax (<ipython-input-54-331af81534c5>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-53-268e588d4171>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if neighbor[i]!=first_neighbor\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-54-331af81534c5>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if neighbor['name']!=first_neighbor['name']\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -1381,7 +1381,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
     "    for neighbor in neighbors:\n",
-    "        if neighbor['name']!=first_neighbor['']\n",
+    "        if neighbor['name']!=first_neighbor['name']\n",
     "        distance.append(neighbor['distance'])\n",
     "    distance.sort()\n",
     "    \n",
