Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1365,24 +1365,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-54-331af81534c5>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-54-331af81534c5>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if neighbor['name']!=first_neighbor['name']\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
     "    for neighbor in neighbors:\n",
-    "        if neighbor['name']!=first_neighbor['name']\n",
-    "        distance.append(neighbor['distance'])\n",
+    "        if neighbor['name']!=first_neighbor['name']:\n",
+    "            distance.append(neighbor['distance'])\n",
     "    distance.sort()\n",
     "    \n",
     "    "
