Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1365,9 +1365,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.distance(first_neighbor, second_neighbor)>"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
@@ -1375,6 +1386,7 @@
     "        if neighbor['name']!=first_neighbor['name']:\n",
     "            distance.append(neighbor['distance'])\n",
     "    distance.sort()\n",
+    "distance\n",
     "    \n",
     "    "
    ]
