Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1375,6 +1375,7 @@
     "        if neighbor['name']!=first_neighbor['name']:\n",
     "            distance.append(neighbor['distance'])\n",
     "    distance.sort()\n",
+    "    return distance\n",
     "\n",
     "    \n",
     "    "
@@ -1382,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
