Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1376,6 +1376,7 @@
     "            distance.append(neighbor['distance'])\n",
     "    distance.sort()\n",
     "    \n",
+    "    for i in range(nu)\n",
     "\n",
     "    \n",
     "    "
