Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1371,12 +1371,14 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    distance=[]\n",
+    "    nearest\n",
     "    for neighbor in neighbors:\n",
     "        if neighbor['name']!=first_neighbor['name']:\n",
     "            distance.append(neighbor['distance'])\n",
     "    distance.sort()\n",
     "    \n",
-    "    for i in range(nu)\n",
+    "    for i in range(number):\n",
+    "        \n",
     "\n",
     "    \n",
     "    "
