Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1378,6 +1378,7 @@
     "    distance.sort()\n",
     "    \n",
     "    for i in range(number):\n",
+    "        nearest_neighbors.append()\n",
     "        \n",
     "        \n",
     "\n",
