--- a/index.ipynb
+++ b/index.ipynb
@@ -1370,7 +1370,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    \n",
+    "    neighbors[]\n",
     "    \n",
     "    for i in range(number):\n",
     "        nearest_neighbors.append()\n",
