--- a/index.ipynb
+++ b/index.ipynb
@@ -1370,7 +1370,8 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    neighbors[]\n",
+    "    neighbors['distance'].sort()\n",
+    "    retu\n",
     "    \n",
     "    for i in range(number):\n",
     "        nearest_neighbors.append()\n",
