Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1375,7 +1375,8 @@
     "    \n",
     "    for i in range(number):\n",
     "        nearest_neighbors.append(neighbors[i])\n",
-    "    return nei\n",
+    "    return nearest_neighbors\n",
+    "\n",
     "        \n",
     "        \n",
     "\n",
