Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1370,12 +1370,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    nearest_neighbors=[]\n",
-    "    neighbors['distance'].sort()\n",
-    "    \n",
-    "    for i in range(number):\n",
-    "        nearest_neighbors.append(neighbors[i])\n",
-    "    return nearest_neighbors\n",
+    "    sorted(lis, key = lambda i: i['age']) \n",
     "\n",
     "        \n",
     "        \n",
