--- a/index.ipynb
+++ b/index.ipynb
@@ -1370,7 +1370,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    sorted(lis, key = lambda i: i['age']) \n",
+    "    sorted(neighbors, key = lambda i: i['distanc']) \n",
     "\n",
     "        \n",
     "        \n",
