--- a/index.ipynb
+++ b/index.ipynb
@@ -1365,13 +1365,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    sorted(neighbors, key = lambda i: i['distance']) \n",
-    "    return \n",
+    "    return neighbors\n",
     "\n",
     "        \n",
     "        \n",
