--- a/index.ipynb
+++ b/index.ipynb
@@ -1370,7 +1370,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    \n",
+    "    neighbors_sortby\n",
     "    sorted(neighbors, key = lambda i: i['distance']) \n",
     "    return neighbors\n",
     "\n",
