Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1365,14 +1365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    neighbors_sortbydistance=neighbors\n",
-    "    sortedneighbors_sortbydistance, key = lambda i: i['distance']) \n",
-    "    return neighbors\n",
+    "    sorted(neighbors_sortbydistance, key = lambda i: i['distance']) \n",
+    "    return neighbors_sortbydistance\n",
     "\n",
     "        \n",
     "        \n",
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1397,7 @@
        " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
