Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1373,7 +1373,7 @@
     "    neighbors_sortbydistance=neighbors\n",
     "    sorted(neighbors_sortbydistance, key = lambda i: i['distance']) \n",
     "    \n",
-    "    if n\n",
+    "    if neighbors_sortbydistance['']\n",
     "\n",
     "        \n",
     "        \n",
