Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1371,7 +1371,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    neighbors_sortbydistance=neighbors\n",
-    "    for i in\n",
+    "    for i in range()\n",
     "    sorted(neighbors_sortbydistance, key = lambda i: i['distance']) \n",
     "    \n",
     "    \n",
