--- a/index.ipynb
+++ b/index.ipynb
@@ -1372,7 +1372,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    neighbors_sortbydistance=neighbors\n",
     "    for i in range(len(neighbors)):\n",
-    "        \n",
+    "        if neighbors\n",
     "    sorted(neighbors_sortbydistance, key = lambda i: i['distance']) \n",
     "    \n",
     "    \n",
