Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1371,8 +1371,8 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    for i in range(len(neighbors)):\n",
-    "        if neighbors\n",
-    "    sorted(neighbors_sortbydistance, key = lambda i: i['distance']) \n",
+    "        if neighbors[]\n",
+    "    sorted(neighbors, key = lambda i: i['distance']) \n",
     "    \n",
     "    \n",
     "\n",
