--- a/index.ipynb
+++ b/index.ipynb
@@ -1371,7 +1371,8 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    for i in range(len(neighbors)):\n",
-    "        \n",
+    "        if neighbors[i]['name']=first_neighbors['name']:\n",
+    "            nei\n",
     "            \n",
     "    sorted(neighbors, key = lambda i: i['distance']) \n",
     "    \n",
