--- a/index.ipynb
+++ b/index.ipynb
@@ -1372,7 +1372,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    for i in range(len(neighbors)):\n",
     "        if neighbors[i]['name']=first_neighbors['name']:\n",
-    "            nei\n",
+    "            neighbors.pop()\n",
     "            \n",
     "    sorted(neighbors, key = lambda i: i['distance']) \n",
     "    \n",
