Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1365,9 +1365,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-68-07942a496906>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-68-07942a496906>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    if neighbors[i]['name']=first_neighbors['name']:\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    for i in range(len(neighbors)):\n",
