--- a/index.ipynb
+++ b/index.ipynb
@@ -1371,7 +1371,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    sorted(neighbors, key = lambda i: i['distance']) \n",
-    "    return neighbors(1,number)\n",
+    "    return neighbors[1,number)\n",
     "    \n",
     "    \n",
     "\n",
