Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1365,13 +1365,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    sorted(neighbors, key = lambda i: i['distance']) \n",
-    "    return neighbors[1:number]\n",
+    "    return neighbors\n",
     "    \n",
     "    \n",
     "\n",
@@ -1384,16 +1384,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285}]"
+       "[{'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 0.0},\n",
+       " {'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285},\n",
+       " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0},\n",
+       " {'name': 'Edgar', 'avenue': 6, 'street': 13, 'distance': 5.385164807134504},\n",
+       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979},\n",
+       " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
