--- a/index.ipynb
+++ b/index.ipynb
@@ -1386,7 +1386,7 @@
    ],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    sorted(neighbors, key = lambda i: i['distance']) \n",
+    "    new_neighsorted(neighbors, key = lambda i: i['distance']) \n",
     "    return neighbors\n",
     "neighbors\n",
     "    \n",
