Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1386,8 +1386,8 @@
    ],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    new_neighsorted(neighbors, key = lambda i: i['distance']) \n",
-    "    return neighbors\n",
+    "    new_list=sorted(neighbors, key = lambda i: i['distance']) \n",
+    "    return new\n",
     "neighbors\n",
     "    \n",
     "    \n",
