Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1387,8 +1387,8 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    new_list=sorted(neighbors, key = lambda i: i['distance']) \n",
-    "    return new\n",
-    "neighbors\n",
+    "    return new_list\n",
+    " \n",
     "    \n",
     "    \n",
     "\n",
