--- a/index.ipynb
+++ b/index.ipynb
@@ -1371,7 +1371,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    new_list=sorted(neighbors, key = lambda i: i['distance']) \n",
-    "    return new_list[number]\n",
+    "    return new_list[:number]\n",
     "\n",
     "\n",
     "    \n",
