Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,16 +1386,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979}"
+       "[{'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 0.0},\n",
+       " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0}]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
