Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1371,7 +1371,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    new_list=sorted(neighbors, key = lambda i: i['distance']) \n",
-    "    if new_list[i]\n",
+    "    for i in range\n",
     "\n",
     "\n",
     "    \n",
