--- a/index.ipynb
+++ b/index.ipynb
@@ -1371,7 +1371,8 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    new_list=sorted(neighbors, key = lambda i: i['distance']) \n",
-    "    for i in range(len( ne))\n",
+    "    for i in range(len(new_list)):\n",
+    "        pop\n",
     "\n",
     "\n",
     "    \n",
