--- a/index.ipynb
+++ b/index.ipynb
@@ -1372,7 +1372,8 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    new_list=sorted(neighbors, key = lambda i: i['distance']) \n",
     "    for i in range(len(new_list)):\n",
-    "        if new_list[i]['name']==first_neighbor\n",
+    "        if new_list[i]['name']==first_neighbor['name']:\n",
+    "            del new_\n",
     "\n",
     "\n",
     "    \n",
