--- a/index.ipynb
+++ b/index.ipynb
@@ -1374,7 +1374,7 @@
     "    for i in range(len(new_list)):\n",
     "        if new_list[i]['name']==first_neighbor['name']:\n",
     "            del new_list[i]\n",
-    "    return new\n",
+    "    return new_list[:]\n",
     "\n",
     "\n",
     "    \n",
