Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1372,7 +1372,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    new_list=sorted(neighbors, key = lambda i: i['distance']) \n",
     "    for i in range(len(new_list)):\n",
-    "        prin\n",
+    "        print new_list[i]\n",
     "    \n",
     "    \n",
     "\n",
