Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1365,9 +1365,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print(new_list[i])? (<ipython-input-91-16f411ac75c8>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-91-16f411ac75c8>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    print new_list[i]\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(new_list[i])?\n"
+     ]
+    }
+   ],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    new_list=sorted(neighbors, key = lambda i: i['distance']) \n",
