Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1372,8 +1372,8 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    new_list=sorted(neighbors, key = lambda i: i['distance']) \n",
     "    for i in range(len(new_list)):\n",
-    "        if new_list[i]['name']==first_neighbor['name']\n",
-    "        de\n",
+    "        if new_list[i]['name']==first_neighbor['name']:\n",
+    "            dele\n",
     "    \n",
     "    \n",
     "\n",
