--- a/index.ipynb
+++ b/index.ipynb
@@ -1373,7 +1373,7 @@
     "    new_list=sorted(neighbors, key = lambda i: i['distance']) \n",
     "    for i in range(len(new_list)):\n",
     "        if new_list[i]['name']==first_neighbor['name']:\n",
-    "            return new_list[i]\n",
+    "            del new_list[i]\n",
     "    \n",
     "    \n",
     "\n",
