Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1371,7 +1371,8 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    new_list=sorted(neighbors, key = lambda i: i['distance']) \n",
-    "    return new_list[0]\n",
+    "    del new_list[0]\n",
+    "    return new_lk\n",
     "    \n",
     "\n",
     "        \n",
